[package]
name = "ebook-reader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebook-reader"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
epub = "2.1"
textwrap = "0.16"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html2text = "0.12"
anyhow = "1.0"
thiserror = "1.0"
